load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/date_time/*.hpp",
    "include/boost/date_time/gregorian/*.hpp",
    "include/boost/date_time/local_time/*.hpp",
    "include/boost/date_time/posix_time/*.hpp",
]

cc_library(
    name = "date_time_internal",
    hdrs = glob(["include/boost/**/*"], exclude = _public_hdrs),
    srcs = glob(["libs/date_time/src/**/*.cpp"], exclude = [
        "libs/date_time/src/gregorian/greg_weekday.cpp",
        "libs/date_time/src/gregorian/date_generators.cpp",
    ]),
)

cc_library(
    name = "date_time",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":date_time_internal",
        "@boost//utility",
        "@boost//static_assert",
        "@boost//type_traits",
        "@boost//numeric_conversion",
        "@boost//throw_exception",
        "@boost//algorithm",
        "@boost//lexical_cast",
    ],
)
